created fd2.table.spec.js to test Harvest Report Table

--- a/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
@@ -46,7 +46,7 @@
      </ul>
     </p>
 
-    <custom-table data-cy="test-table"
+    <custom-table data-cy="harvestReport-table"
         :columns="columns"
         :rows="compReportRows" 
         
