--- a/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
@@ -48,26 +48,11 @@
             <li><strong>Crop</strong>:<span data-cy="report-crop">{{ reportCrop }}</span></li>
         </ul>
         <br>
-        <table border="1" data-cy="harvest-report-table" v-if="hasTable">
-            <tr v-if="harvestReportRows.length !== 0">
-                <th>Row</th>
-                <th>Date</th>
-                <th>Area</th>
-                <th>Crop</th>
-                <th>Yield</th>
-                <th>Units</th>
-                <th>Delete</th>
-            </tr>
-            <tr v-for="(log,index) in harvestReportRows">
-                <td>{{ index + 1}}</td>
-                <td>{{ log.date }}</td>
-                <td>{{ log.area }}</td>
-                <td>{{ log.crop }}</td>
-                <td>{{ log.yield }}</td>
-                <td>{{ log.units }}</td>
-                <td><button type="button" @click="deleteRow">Delete</button></td>
-            </tr>
-        </table>
+        <custom-table data-cy="test-table"
+            :columns="columns"
+            :rows="harvestReportRows">
+
+        </custom-table>
         <p v-if="harvestReportRows.length === 0" data-cy="no-record-message">There are no matching records!</p>
     </div>
 
@@ -76,6 +61,7 @@
             el: "#report",
             components: {
                 "dropdown-with-all": DropdownWithAllComponent,
+                'custom-table': CustomTableComponent,
             },
             data: {
                 reportTitle: "My Sample Harvest Report",
@@ -93,6 +79,15 @@
                 hasTitle: false,
                 hasDetails: false,
                 hasTable: false,
+
+                columns: [
+                    {"header": "ID", "visible": true, "inputType": {"type": "no input"}},
+                    {"header": "Date", "visible": true, "inputType": {"type": "no input"}},
+                    {"header": "Area", "visible": true, "inputType": {"type": "no input"}},
+                    {"header": "Crop", "visible": true, "inputType": {"type": "no input"}},
+                    {"header": "Yield", "visible": true, "inputType": {"type": "no input"}},
+                    {"header": "Units", "visible": true, "inputType": {"type": "no input"}},
+                ],
             },
             computed: {
                 cropNames() {
@@ -104,17 +99,22 @@
                     arr.unshift("All");
                     return arr;
                 },
+
                 harvestReportRows() {
                     let tableRows = [];
                     for (let log of this.result) {
                         let tableRow = {
-                            date: dayjs.unix(log.timestamp).format("MM/DD/YYYY"),
-                            area: log.area[0].name,
-                            yield: log.quantity[0].value,
-                            units: log.quantity[0].unit.name,
-                            crop: this.idToCropMap.get(log.data.crop_tid),
+                            id: log.id,
+                            data: [
+                                log.id,
+                                dayjs.unix(log.timestamp).format("MM/DD/YYYY"),
+                                log.area[0].name,
+                                this.idToCropMap.get(log.data.crop_tid),
+                                log.quantity[0].value,
+                                log.quantity[0].unit.name,
+                            ],
                         }
-                        if (tableRow.crop === this.reportCrop) {
+                        if (this.idToCropMap.get(log.data.crop_tid) === this.reportCrop) {
                             tableRows.push(tableRow);
                         }
                         else if (this.reportCrop === "All") {
@@ -122,7 +122,7 @@
                         }
                     }
                     return tableRows;
-                },
+                }
             },
             methods: {
                 generateReport: function() {
