Create a new test for the contents of harvest report table

--- a/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
@@ -50,7 +50,8 @@
         <br>
         <custom-table data-cy="test-table"
             :columns="columns"
-            :rows="harvestReportRows">
+            :rows="harvestReportRows"
+            v-if="hasTable">
 
         </custom-table>
         <p v-if="harvestReportRows.length === 0" data-cy="no-record-message">There are no matching records!</p>
