Added to clickReport that it only displays the selectedCrop instead of all crops + fixed

--- a/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/api2/api2.html
@@ -23,7 +23,7 @@
      <br>
      <br>
      <label for="crops">Crop:</label>
-        <select v-model="crops" id="crops" name="crops">
+        <select v-model="selectedCrop" id="crops" name="crops">
             <option v-for="crops in getCropNames">{{ crops }}</option>
         </select>
      <label for="area">Area:</label>
