--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -3,7 +3,7 @@
 
 <body>
 <div id="vue_spike1" v-cloak>
-     <h1>Harvest Report</h1>
+     <h1 data-cy="page-header">Harvest Report</h1>
      <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
      
      <label for="title">Title:</label>
