--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -15,9 +15,13 @@
      <div>
      <label for="startdate">Start:</label>
 
-     <input type="date" id="startdate" :min="minStartDate" :max="endDate"
+     <input data-cy ="start-date" type="date" id="startdate" :min="minStartDate" :max="endDate"
      v-model="startDate"/>
-     <input type="date" id="enddate" :min="startDate" max="maxEndDate"
+
+
+     <label for="enddate">End:</label>
+     
+     <input data-cy ="end-date" type="date" id="enddate" :min="startDate" max="maxEndDate"
      v-model="endDate"/>
      
      <br>
