--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -48,8 +48,9 @@
 
 
      <div>
-          <input data-cy="gen-report" v-model="newReport" type="text" placeholder="Generate a new report">
-          <button class="btn btn-primary" @click='clickReport'>Generate Report</button>
+          <input  v-model="newReport" type="text" placeholder="Generate a new report">
+          <button data-cy="gen-report" class="btn btn-primary"
+           @click='clickReport' type="button">Generate Report</button>
      </div>
      <hr>
 
@@ -66,7 +67,7 @@
           <li data-cy="user-name"><b>User:</b>{{ User }}</li>
 
           <li><b>Language:</b> <span data-cy="language-check">
-               {{ Language }}</span> </li>
+               {{ Language }} </span> </li>
 
           <br>
 
@@ -167,9 +168,9 @@
           clickReport: function(){
                axios.get('/farm.json')
                .then((response) => {
-                    this.farm=response.data.name;
-                    this.user=response.data.user.name;
-                    this.language=response.data.languages.en.name;
+                    this.Farm=response.data.name;
+                    this.User=response.data.user.name;
+                    this.Language=response.data.languages.en.name;
                })
                .catch ((error) => {
                     console.log("Error Occurred")
@@ -183,7 +184,7 @@
                Area:"", Crop:"", Yield:"",Units:""
                }),
                this.headerInput = "My Sample Harvest Report";
-               this.Farm="Sample Farm";
+               this.Farm=" Sample Farm";
                this.User="manager1";
                this.Language="English";
 
