--- a/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
@@ -3,7 +3,7 @@
 <div id="vue_spike2" v-cloak>
     <body>
         <p>
-        <h1>Harvest Report</h1>
+        <h1 data-cy="page-header">Harvest Report</h1>
         <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
 
         
