--- a/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
@@ -14,10 +14,10 @@
 
         <div>
         <label for="startdate">Start:</label>
-        <input type="date" id="startdate" name="start_date" 
+        <input data-cy="start-date" type="date" id="startdate" name="start_date" 
             v-model ="startDate" min="2014-01-01" :max="endDate"/>
         <label for="enddate">End:</label>
-        <input type="date" id="enddate" name="end_date" 
+        <input data-cy="end-date"  type="date" id="enddate" name="end_date" 
             v-model ="endDate"  :min="startDate" max="2022-01-01"/>
         </div>
 
