Created Farmdata E2E test for crop dropdown element

--- a/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
@@ -25,7 +25,7 @@
 
         <div>
         <label for="crops">Crop:</label>
-        <select v-model="crops" id="crops" name="crops">
+        <select data-cy="crop-drop" v-model="crops" id="crops" name="crops">
             <option v-for="crops in cropNames">{{ crops }}</option>
         </select>
         
