Update Farmdata E2E test for Generate Button to include tests for report details

--- a/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/e2e.html
@@ -46,10 +46,10 @@
 
         <p v-if='state === "activeReport"'>Details:</p>
 
-        <ul v-if='state === "activeReport"'>
+        <ul data-cy="report-info" v-if='state === "activeReport"'>
         <li><strong>Farm:</strong> {{ farm }}</li>
         <li><strong>User:</strong> {{ user }}</li>
-        <li><strong>Language:</strong> {{ language }}</li>
+        <li><strong>Language:</strong> <span data-cy="language">{{ language }}</span></li>
         </ul>
 
         <br>
