Fixed Seeding Input Log so that it is only enabled when correctly formatted dates are inputted

--- a/farmdata2/farmdata2_modules/fd2_field_kit/seedingInput/seedingInput.html
+++ b/farmdata2/farmdata2_modules/fd2_field_kit/seedingInput/seedingInput.html
@@ -307,6 +307,12 @@
                     if (this.submitInProgress == true){
                         return true
                     }
+                    if (this.selectedDate === null || this.selectedDate === dayjs().format('YYYY-MM-DD').toString()) {
+                        return true;
+                    }
+                    if (!dayjs(this.selectedDate, 'YYYY-MM-DD', true).isValid()) {
+                        return true;
+                    }
                     if(this.selectedCrop == null){
                         return true
                     }
